# CodeforcesRunnerEliot

./: .gitignore  README.md  cf.py  conf.json  ecfr.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
example/: conf.json
src/ecfr/: ecfr.py
src/ecfr/example/: conf.json
src/ecfr/example/starter_files/: starter.py
starter_files/: starter.py
tests/: test_ecfr.py
