[tool.poetry]
name = "ecfr"
version = "0.1.0"
description = "A package to make CodeForces contests easier."
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
click = "^8.1.7"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
requests = "^2.31.0"

# Define dev dependencies and make optional
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
lxml-stubs = "^0.4.0"
types-requests = "^2.31.0.10"
types-colorama = "^0.4.15.12"
types-beautifulsoup4 = "^4.12.0.7"
mypy = "^1.7.0"
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["starter_files"]
disallow_untyped_defs = true

[tool.flake8]
# Black compatibility
max-line-length = 88
extend-ignore = ["E203", "W503"]

# Per <https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile>
[tool.isort]
profile = "black"
