[tool.poetry]
name = "ecfr"
version = "0.1.1"
description = "A package to make CodeForces contests easier."
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "ecfr", from = "src"}
]


[tool.poetry.urls]
homepage = "https://github.com/eliotwrobson/CodeforcesRunnerEliot"
documentation = "https://github.com/eliotwrobson/CodeforcesRunnerEliot#readme"
repository = "https://github.com/eliotwrobson/CodeforcesRunnerEliot"
changelog = "https://github.com/eliotwrobson/CodeforcesRunnerEliot/releases"

[tool.poetry.scripts]
ecfr = "ecfr.ecfr:cli"

[tool.poetry.dependencies]
python = ">=3.9"
colorama = ">=0.4"
click = ">=8"
beautifulsoup4 = ">=4"
lxml = ">=4"
requests = ">=2"

# Define dev dependencies and make optional
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
types-lxml = "^2024.2.9"
types-requests = "^2.31.0.10"
types-colorama = "^0.4.15.12"
types-beautifulsoup4 = "^4.12.0.7"
mypy = "^1.7.0"
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["starter_files"]
disallow_untyped_defs = true

[tool.flake8]
# Black compatibility
max-line-length = 88
extend-ignore = ["E203", "W503"]

# Per <https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile>
[tool.isort]
profile = "black"
